feat: add pipe operator and clean up data processing code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Ian", "Campbell", , "ian.campbell.92@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-License: use_mit_license()
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -13,5 +13,9 @@ Imports:
     ggplot2,
     patchwork,
     tibble,
-    rlang
-    
+    rlang,
+    magrittr
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
